--- a/basic_workings.ipynb
+++ b/basic_workings.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "61321125",
+   "id": "ec0e085a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1063abb7",
+   "id": "f6c888d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c89c15a9",
+   "id": "13ef01d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c6904825",
+   "id": "eca90364",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c1bb09f4",
+   "id": "8d17e057",
    "metadata": {},
    "outputs": [
     {
@@ -18006,8 +18006,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "bd5ffbd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "\n",
+    "#llm = ChatOpenAI(openai_api_key=\"...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d34f14de",
+   "id": "ccae400b",
    "metadata": {},
    "outputs": [],
    "source": []
